# pythonprograms

./: #multiplication table.py  BankAccount.py  Dockerfile  Employee system.py  Hospital.py  School.py  Shapes.py  calc.py  cart.py  contacts.json  contacts.py  debug_log.txt  debug_profile_demo.py  diary.py  diary.txt  environment.yml  fast_profile.prof  full_profile.prof  handling.py  marks.py  numtracer.py  passwordcheck.py  pattern.py  requirements.txt  school.sql  slow_profile.prof  sql_1.sql  sql_2.sql  sql_3.sql  sql_4.sql  weekend_test.py
bank_test/: bank.py  test_bank.py
cart_test/: cart.py  test_cart.py
math_test/: math_utils.py  test_math_utils.py
quiz_game/: index.html  script.js  style.css
string_test/: string_utils.py  test_string_utils.py
student_api/: client.py  database.py  main.py  models.py  students.json
student_api/static/: index.html
students_grades/: mypy.ini  ruff.toml  student_grades.py
task_manager/: __init__.py  main.py  models.py  pyproject.toml  repository.py  services.py  validators.py
task_manager/tests/: test_task_manager.py
validator_test/: test_validator.py  validator.py
weather_dashboard/: index.html  script.js  style.css
